--- a/autossh/config.yaml
+++ b/autossh/config.yaml
@@ -18,11 +18,11 @@ map:
   - 'config:rw'
 
 options:
-  hostname: ''
+  hostname: 'home.nextio.cloud'
   ssh_port: 22
   username: ubuntu
   remote_forwarding:
-    - '4433:192.168.9.32:443'
+    - '443:192.168.9.32:443'
   other_ssh_options: '-v -N'
   force_keygen: false
 schema:
