--- a/autossh/config.yaml
+++ b/autossh/config.yaml
@@ -22,8 +22,8 @@ options:
   ssh_port: 22
   username: ubuntu
   remote_forwarding:
-    - '443:192.168.9.32:443'
-  other_ssh_options: '-v -N'
+    - '8443:192.168.9.32:443'
+  other_ssh_options: '-v sudo socat TCP-LISTEN:443,fork TCP:0.0.0.0:8443'
   force_keygen: false
 schema:
   hostname: str
